--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,6 @@
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
-    "no-console": "error"
+    "no-console": "off"
   }
 }
